// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with checked switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={true}
      disabled={false}
      style={
        Object {
          "backgroundColor": "rgba(219, 219, 232, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <View
        checked={true}
        disabled={false}
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 9999,
            "height": 16,
            "transform": Array [
              Object {
                "translateX": 4,
              },
            ],
            "width": 16,
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with default switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={false}
      disabled={false}
      style={
        Object {
          "backgroundColor": "rgba(244, 97, 82, 1)",
          "borderRadius": 9999,
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <View
        checked={false}
        disabled={false}
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 9999,
            "height": 16,
            "transform": Array [
              Object {
                "translateX": 28,
              },
            ],
            "width": 16,
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled and checked switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={true}
      disabled={true}
      style={
        Object {
          "backgroundColor": false,
          "borderRadius": 9999,
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <View
        checked={true}
        disabled={true}
        style={
          Object {
            "backgroundColor": "#DBDBE8",
            "borderRadius": 9999,
            "height": 16,
            "transform": Array [
              Object {
                "translateX": 4,
              },
            ],
            "width": 16,
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableWithoutFeedback>
    <View
      checked={false}
      disabled={true}
      style={
        Object {
          "backgroundColor": false,
          "borderRadius": 9999,
          "display": "flex",
          "height": 24,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <View
        checked={false}
        disabled={true}
        style={
          Object {
            "backgroundColor": "#DBDBE8",
            "borderRadius": 9999,
            "height": 16,
            "transform": Array [
              Object {
                "translateX": 28,
              },
            ],
            "width": 16,
          }
        }
      />
    </View>
  </TouchableWithoutFeedback>
</View>
`;
